.provarCaches/00D5f000005vwGkEAI/objects/rstk__icjobsetoper__c.object
<CustomObject>
    <description>icjobsetoper__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icjobsetoper_icjobset__r.rstk__externalid__c + TEXT(rstk__icjobsetoper_oper__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>TEXT(rstk__icjobsetoper_oper__c) &amp; &quot;(&quot; &amp; rstk__icjobsetoper_desc__c &amp;&quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_altprice1__c</fullName>
        <description>Alt 1 Labor Price per Hour</description>
        <label>Alt 1 Labor Price per Hour</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_altprice2__c</fullName>
        <description>Alt 2 Labor Price per Hour</description>
        <label>Alt 2 Labor Price per Hour</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_assignto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Employee Assigned To</description>
        <label>Employee Assigned To</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Job Set Labors</relationshipLabel>
        <relationshipName>icjobsetopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_concurseqno__c</fullName>
        <description>Concurrent Sequence</description>
        <label>Concurrent Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_desc__c</fullName>
        <description>Description</description>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_extaltprice1__c</fullName>
        <formula>( rstk__icjobsetoper_sethours__c + rstk__icjobsetoper_runhours__c + rstk__icjobsetoper_machhr__c) * rstk__icjobsetoper_altprice1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Alternate Price 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_extaltprice2__c</fullName>
        <formula>( rstk__icjobsetoper_sethours__c + rstk__icjobsetoper_runhours__c + rstk__icjobsetoper_machhr__c) * rstk__icjobsetoper_altprice2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Alternate Price 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_extcost__c</fullName>
        <description>Extended Cost</description>
        <label>Extended Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_extprice__c</fullName>
        <formula>(( rstk__icjobsetoper_sethours__c + rstk__icjobsetoper_runhours__c) * rstk__icjobsetoper_price__c) + (rstk__icjobsetoper_machhr__c * rstk__icjobsetoper_machpricehr__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_hours__c</fullName>
        <formula>rstk__icjobsetoper_runhours__c + rstk__icjobsetoper_sethours__c+ rstk__icjobsetoper_machhr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_icjobcode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Job Code</description>
        <label>Job Code</label>
        <referenceTo>rstk__icjobcode__c</referenceTo>
        <relationshipLabel>Job Set Labors</relationshipLabel>
        <relationshipName>icjobsetopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_icjobset__c</fullName>
        <description>Job Set ID</description>
        <label>Job Set ID</label>
        <referenceTo>rstk__icjobset__c</referenceTo>
        <relationshipLabel>Job Set Labors</relationshipLabel>
        <relationshipName>icjobsetopers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_insptempl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inspection Order Template</description>
        <label>Inspection Order Template</label>
        <referenceTo>rstk__insptempl__c</referenceTo>
        <relationshipLabel>Job Set Labors</relationshipLabel>
        <relationshipName>icjobsetopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_labbackflush__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Backflush Labor at Qty Complete</description>
        <label>Backflush Labor at Qty Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_labbfclock__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Labor Backflush Txn User</description>
        <label>Labor Backflush Txn User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Job Set Labors (Labor Backflush Txn User)</relationshipLabel>
        <relationshipName>icjobsetopers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_machhr__c</fullName>
        <description>Machine Hours</description>
        <label>Machine Hours</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_machpricehr__c</fullName>
        <description>Machine Price per Hour</description>
        <label>Machine Price per Hour</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_machtype__c</fullName>
        <description>Machine Time Type</description>
        <label>Machine Time Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Per Batch</fullName>
                </value>
                <value>
                    <fullName>Per Piece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_movcompind__c</fullName>
        <description>Move / Complete</description>
        <label>Move / Complete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete (Concurrent Only)</fullName>
                </value>
                <value>
                    <fullName>Complete &amp; Move in 1-step</fullName>
                </value>
                <value>
                    <fullName>Complete &amp; Move Separately</fullName>
                </value>
                <value>
                    <fullName>Neither (Last Operation)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_oper__c</fullName>
        <description>Operation Number</description>
        <label>Operation Number</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_price__c</fullName>
        <description>Price per Hour</description>
        <label>Labor Price per Hour</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_rtmach__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Machine Number</description>
        <label>Machine Number</label>
        <referenceTo>rstk__rtmach__c</referenceTo>
        <relationshipLabel>Job Set Labors</relationshipLabel>
        <relationshipName>icjobsetopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_rtproc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Process ID</description>
        <label>Process ID</label>
        <referenceTo>rstk__rtproc__c</referenceTo>
        <relationshipLabel>Job Set Labors</relationshipLabel>
        <relationshipName>icjobsetopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_rtwctr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work Center</description>
        <label>Work Center</label>
        <referenceTo>rstk__rtwctr__c</referenceTo>
        <relationshipLabel>Job Set Labors</relationshipLabel>
        <relationshipName>icjobsetopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_runhours__c</fullName>
        <description>Run Hours</description>
        <label>Run Hours</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_runlabgrd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Run Labor Grade</description>
        <label>Run Labor Grade</label>
        <referenceTo>rstk__rtlabgrd__c</referenceTo>
        <relationshipLabel>Job Set Labors</relationshipLabel>
        <relationshipName>icjobsetopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_runtype__c</fullName>
        <description>Run Time Type</description>
        <label>Run Time Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Per Batch</fullName>
                </value>
                <value>
                    <fullName>Per Piece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_sethours__c</fullName>
        <description>Setup Hours</description>
        <label>Setup Hours</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_setlabgrd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Setup Labor Grade</description>
        <label>Setup Labor Grade</label>
        <referenceTo>rstk__rtlabgrd__c</referenceTo>
        <relationshipLabel>Job Set Labors (Setup Labor Grade)</relationshipLabel>
        <relationshipName>icjobsetopers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_setuptype__c</fullName>
        <description>Setup Time Type</description>
        <label>Setup Time Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Per Batch</fullName>
                </value>
                <value>
                    <fullName>Per Piece</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inventory Site</description>
        <label>Inventory Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Job Set Labors</relationshipLabel>
        <relationshipName>icjobsetopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icjobsetoper_subflag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Subcontract Indicator</description>
        <label>Subcontract Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <description>Trigger Options</description>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Job Set Labor</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Set Labor  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Set Labors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Alt_1_Labor_Price_canot_b_less_than_0</fullName>
        <active>true</active>
        <description>Alt 1 Labor Price per Hour cannot be less than 0</description>
        <errorConditionFormula>rstk__icjobsetoper_altprice1__c &lt; 0</errorConditionFormula>
        <errorMessage>Alt  Labor Price 1 per Hour cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Alt_2_Labor_Price_canot_b_less_than_0</fullName>
        <active>true</active>
        <description>Alt 2 Labor Price per Hour cannot be less than 0</description>
        <errorConditionFormula>rstk__icjobsetoper_altprice2__c &lt; 0</errorConditionFormula>
        <errorMessage>Alt  Labor Price 2 per Hour cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Concurrent_Sequence_not_less_than_0</fullName>
        <active>true</active>
        <description>Concurrent Sequence cannot be less than 0</description>
        <errorConditionFormula>rstk__icjobsetoper_concurseqno__c &lt;= 0</errorConditionFormula>
        <errorMessage>Concurrent Sequence cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Inventory_Site_cannot_be_blank</fullName>
        <active>true</active>
        <description>Inventory_Site_cannot_be_blank</description>
        <errorConditionFormula>ISBLANK(rstk__icjobsetoper_site__c)</errorConditionFormula>
        <errorMessage>Inventory Site cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Labor_Price_per_Hour_canot_b_less_than_0</fullName>
        <active>true</active>
        <description>Labor_Price_per_Hour_canot_b_less_than_0</description>
        <errorConditionFormula>rstk__icjobsetoper_price__c &lt; 0</errorConditionFormula>
        <errorMessage>Labor Price per Hour cannot  be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Machine_Hours_cannot_be_less_than_0</fullName>
        <active>true</active>
        <description>Machine_Hours_cannot_be_less_than_0</description>
        <errorConditionFormula>rstk__icjobsetoper_machhr__c &lt; 0</errorConditionFormula>
        <errorMessage>Machine Hours cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Machine_Hours_must_be_greater_than_0</fullName>
        <active>true</active>
        <description>Machine Hours must be greater than 0</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL( rstk__icjobsetoper_machtype__c, &apos;None&apos;)), rstk__icjobsetoper_machhr__c &lt;= 0 
)</errorConditionFormula>
        <errorMessage>Machine Hours must be greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Machine_Number_cannot_be_blank</fullName>
        <active>true</active>
        <description>Machine Number cannot be blank</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL( rstk__icjobsetoper_machtype__c, &apos;None&apos;)),ISBLANK(rstk__icjobsetoper_rtmach__c)
)</errorConditionFormula>
        <errorMessage>Machine Number cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Machn_Price_per_Hour_canot_b_less_than_0</fullName>
        <active>true</active>
        <description>Machine_Price_per_Hour_canot_b_less_than_0</description>
        <errorConditionFormula>rstk__icjobsetoper_machpricehr__c &lt; 0</errorConditionFormula>
        <errorMessage>Machine Price per Hour cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Operation_Number_cannot_be_blank</fullName>
        <active>true</active>
        <description>Operation Number cannot be blank</description>
        <errorConditionFormula>ISBLANK(rstk__icjobsetoper_oper__c)</errorConditionFormula>
        <errorMessage>Operation Number cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Process_ID_cannot_be_blank</fullName>
        <active>true</active>
        <description>Process_ID_cannot_be_blank</description>
        <errorConditionFormula>ISBLANK(rstk__icjobsetoper_rtproc__c)</errorConditionFormula>
        <errorMessage>Process ID cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Run_Hours_cannot_be_less_than_0</fullName>
        <active>true</active>
        <description>Run_Hours_cannot_be_less_than_0</description>
        <errorConditionFormula>rstk__icjobsetoper_runhours__c &lt; 0</errorConditionFormula>
        <errorMessage>Run Hours cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Run_Hours_must_be_greater_than_0</fullName>
        <active>true</active>
        <description>Run Hours must be greater than 0</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL( rstk__icjobsetoper_runtype__c, &apos;None&apos;)), rstk__icjobsetoper_runhours__c &lt;= 0 
)</errorConditionFormula>
        <errorMessage>Run Hours must be greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Run_Labor_Grade_cannot_be_blank</fullName>
        <active>true</active>
        <description>Run Labor Grade cannot be blank</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL( rstk__icjobsetoper_runtype__c, &apos;None&apos;)), ISBLANK(rstk__icjobsetoper_runlabgrd__c) 
)</errorConditionFormula>
        <errorMessage>Run Labor Grade cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Setup_Hours_cannot_be_less_than_0</fullName>
        <active>true</active>
        <description>Setup_Hours_cannot_be_less_than_0</description>
        <errorConditionFormula>rstk__icjobsetoper_sethours__c &lt; 0</errorConditionFormula>
        <errorMessage>Setup Hours cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Setup_Hours_must_be_greater_than_0</fullName>
        <active>true</active>
        <description>Setup Hours must be greater than 0</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL( rstk__icjobsetoper_setuptype__c, &apos;None&apos;)),rstk__icjobsetoper_sethours__c &lt;= 0
)</errorConditionFormula>
        <errorMessage>Setup Hours must be greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Setup_Labor_Grade_cannot_be_blank</fullName>
        <active>true</active>
        <description>Setup_Labor_Grade_cannot_be_blank</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL( rstk__icjobsetoper_setuptype__c, &apos;None&apos;)),ISBLANK(rstk__icjobsetoper_setlabgrd__c)
)</errorConditionFormula>
        <errorMessage>Labor Grade cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Work_Center_cannot_be_blank</fullName>
        <active>true</active>
        <description>Work_Center_cannot_be_blank</description>
        <errorConditionFormula>ISBLANK(rstk__icjobsetoper_rtwctr__c)</errorConditionFormula>
        <errorMessage>Work Center cannot be blank</errorMessage>
    </validationRules>
</CustomObject>